[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://menu/console/console.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=1]

[node name="console" type="Popup"]
pause_mode = 2
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.000244141
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output_background" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.9
color = Color( 0, 0, 0, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="RichTextLabel" parent="output_background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="command_input" type="LineEdit" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="text_changed" from="command_input" to="." method="_on_command_input_text_changed"]
[connection signal="text_entered" from="command_input" to="." method="_on_command_input_text_entered"]
